src/objects/Apttus_Config2__ConstraintRuleCondition__c.object
<CustomObject>
    <description>Captures information about condition of a constraint rule. In order for a rule to trigger all or some of the rule conditions should be true and the combining expression should be true.</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConditionCriteria__c</fullName>
        <description>Represents criteria for the rule condition</description>
        <label>Condition Criteria</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConstraintRuleId__c</fullName>
        <description>Reference to the master record which is a constraint rule.</description>
        <label>Constraint Rule</label>
        <referenceTo>Apttus_Config2__ConstraintRule__c</referenceTo>
        <relationshipLabel>Constraint Rule Conditions</relationshipLabel>
        <relationshipName>ConstraintRuleConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EditCriteria__c</fullName>
        <description>Edit &quot;Condition Criteria&quot; button</description>
        <formula>HYPERLINK(&quot;/apex/Apttus_Config2__ConstraintRuleConditionCriteriaEdit?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_EditCriteria&quot;, &quot;Edit Criteria&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditions are evaluated against the products found in asset.</description>
        <label>Match In Asset (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInCartOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to check for options in the whole cart</description>
        <label>Match In Cart Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When match is location is set to true action will be taken for the given location.</description>
        <inlineHelpText>Set this value to true only for location specific rules.</inlineHelpText>
        <label>Match In Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditions are evaluated against the products added as options.</description>
        <label>Match In Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInPrimaryLines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditions are evaluated against products added as primary lines.</description>
        <label>Match In Primary Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInRelatedLines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditions are evaluated against services.</description>
        <label>Match In Related Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchMaxProducts__c</fullName>
        <description>Used by match rule as the max limit</description>
        <label>Match Max Products</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchMinProducts__c</fullName>
        <description>Used by match rule as the min limit</description>
        <label>Match Min Products</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchRule__c</fullName>
        <description>Specifies number of products to match.</description>
        <label>Match Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match Any In Group</fullName>
                </value>
                <value>
                    <fullName>Match All In Group</fullName>
                </value>
                <value>
                    <fullName>Min/Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>Category specification is required when product scope is set as category.</description>
        <label>Product Category(Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>Product family specification is necessary when product scope is set as product family.</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldA__c</fullName>
        <label>Product Field A</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldB__c</fullName>
        <label>Product Field B</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ProductCode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldC__c</fullName>
        <label>Product Field C</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldD__c</fullName>
        <label>Product Field D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldOperatorA__c</fullName>
        <description>Operator used to search products by product field</description>
        <label>Operator A</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                    <default>true</default>
                    <label>equal to</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldOperatorB__c</fullName>
        <description>Operator used to search products by product field</description>
        <label>Operator B</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                    <default>true</default>
                    <label>equal to</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldOperatorC__c</fullName>
        <description>Operator used to search products by product field</description>
        <label>Operator C</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                    <default>true</default>
                    <label>equal to</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldOperatorD__c</fullName>
        <description>Operator used to search products by product field</description>
        <label>Operator D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                    <default>true</default>
                    <label>equal to</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldValueA__c</fullName>
        <description>Represents the value to be matched against the product field specified in Product Field A</description>
        <label>Field Value A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldValueB__c</fullName>
        <description>Represents the value to be matched against the product field specified in Product Field B</description>
        <label>Field Value B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldValueC__c</fullName>
        <description>Represents the value to be matched against the product field specified in Product Field C</description>
        <label>Field Value C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFieldValueD__c</fullName>
        <description>Represents the value to be matched against the product field specified in Product Field D</description>
        <label>Field Value D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Group should be specified when product scope is set as product group</description>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Constraint Rule Conditions</relationshipLabel>
        <relationshipName>ConstraintRuleConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product is specified when product scope is set for product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Constraint Rule Conditions</relationshipLabel>
        <relationshipName>ConstraintRuleConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductOptionGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Option Group should be specified when product scope is set as option group</description>
        <inlineHelpText>Option Group should be specified when product scope is set as option group</inlineHelpText>
        <label>Product Option Group</label>
        <referenceTo>Apttus_Config2__ProductOptionGroup__c</referenceTo>
        <relationshipLabel>Constraint Rule Conditions</relationshipLabel>
        <relationshipName>ConstraintRuleConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <label>Product Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Product Group</fullName>
                </value>
                <value>
                    <fullName>Product Field Set</fullName>
                </value>
                <value>
                    <fullName>Header Level</fullName>
                </value>
                <value>
                    <fullName>Product Option Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Sequence number of the rule condition is used in the condition expression defined in constraint rule.</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Constraint Rule Condition</label>
    <nameField>
        <label>Constraint Rule Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constraint Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>